--- a/local/datamodels.conf
+++ b/local/datamodels.conf
@@ -1,4 +1,4 @@
 [k_snmp_ta]
-acceleration = 1
-acceleration.earliest_time = -1mon
-acceleration.manual_rebuilds = 0
+acceleration = true
+acceleration.earliest_time = -1y
+acceleration.hunk.dfs_block_size = 0
