--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -25,3 +25,8 @@ disabled = 0
 interval = 60.0
 source = /Applications/Splunk/etc/apps/_kapp/bin/_KCRYPTO/_MARKETLOOPVIZ.py
 sourcetype = _json
+
+[script:///Applications/Splunk/etc/apps/_kapp/bin/_KWEATHER/getWeatherPredictions.py]
+disabled = false
+interval = 28 14 * * *
+sourcetype = _jsonFUTURE
