--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -30,3 +30,8 @@ sourcetype = _json
 disabled = false
 interval = 0 6,14,20 * * *
 sourcetype = _jsonFUTURE
+
+[script:///Applications/Splunk/etc/apps/_kapp/bin/_KWEATHER/getWeatherPredictions3hourly.py]
+disabled = 1
+interval = 30 2,5,8,11,14,17,20,23 * * *
+sourcetype = _jsonFUTURE
