--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -35,3 +35,19 @@ sourcetype = _jsonFUTURE
 disabled = 0
 interval = 30 2,5,8,11,14,17,20,23 * * *
 sourcetype = _jsonFUTURE
+
+[snmp://stinka]
+communitystring = s3cur3d
+destination = 10.1.5.1
+do_bulk_get = 0
+do_get_subtree = 0
+ipv6 = 0
+object_names = 1.3.6.1.2.1.25.3.3.1.2.75, 1.3.6.1.2.1.25.3.3.1.2.76, 1.3.6.1.2.1.25.2.3.1.6.1, 1.3.6.1.4.1.12325.1.200.1.3.1.0
+snmp_mode = attributes
+snmp_version = 2C
+snmpinterval = 60
+sourcetype = snmp_ta
+split_bulk_output = 0
+trap_rdns = 0
+v3_authProtocol = usmHMACMD5AuthProtocol
+v3_privProtocol = usmDESPrivProtocol
