new dashboards for pfSense

--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -51,3 +51,9 @@ split_bulk_output = 0
 trap_rdns = 0
 v3_authProtocol = usmHMACMD5AuthProtocol
 v3_privProtocol = usmDESPrivProtocol
+disabled = 1
+
+[script:///Applications/Splunk/etc/apps/_kapp/bin/_KNETWORK/getPFSENSEstats.py]
+disabled = false
+interval = 60.0
+sourcetype = _json
