--- a/local/savedsearches.conf
+++ b/local/savedsearches.conf
@@ -50,3 +50,27 @@ relation = greater than
 request.ui_dispatch_app = _kapp
 request.ui_dispatch_view = search
 search = sourcetype="_k-claymore" "WATCHDOG: GPU error"
+
+[Bex36 Qotom Reboot]
+action.email = 1
+action.email.format = raw
+action.email.include.results_link = 0
+action.email.include.view_link = 0
+action.email.inline = 1
+action.email.sendresults = 1
+action.email.to = keiran.harris@gmail.com
+action.email.useNSSubject = 1
+alert.suppress = 0
+alert.track = 0
+counttype = number of events
+cron_schedule = 0 * * * *
+dispatch.earliest_time = -1h
+dispatch.latest_time = now
+display.page.search.mode = verbose
+display.visualizations.charting.chart = bar
+enableSched = 1
+quantity = 1
+relation = greater than
+request.ui_dispatch_app = _kapp
+request.ui_dispatch_view = search
+search = host=qotom "KERNEL supported cpus" source="/var/log/syslog"
